# social_visualization

./: .gitignore  README.md  color_config.py  pyproject.toml
Assignments/: Assignment1.ipynb  Assignment1_Asger.ipynb  Assignment1_Sofie.ipynb
Assignments/Assignment_1/: Assignment1.ipynb  Assignment1_Asger.ipynb  requirements.txt
Assignments/Assignment_2/: Assignment2.ipynb  Assignment2_asger.ipynb  Assignment2_esben.ipynb  js_on_change.html  to_do.txt
Exam/: Explainer_notebook.ipynb  Explainer_notebook_ny.ipynb  NYC_dev.ipynb  NYC_dev_asger.ipynb  requirements.txt
Week1/: Week1.ipynb
Week2/: Week2.ipynb
Week3/: Week3.ipynb
Week4/: Week4.ipynb
Week5/: Week5.ipynb
Week6/: Week6.ipynb  sandy_theme.json
Week7/: Week7.ipynb
Week8/: Week8.ipynb
