[tool.poetry]
name = "esbens-github"
version = "0.1.0"
description = ""
authors = ["EsbenBL <53098504+EsbenBL@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "esbens_github"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
ipykernel = "^6.20.2"
requests = "^2.28.2"
matplotlib = "^3.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
