[tool.poetry]
name = "esbens-github"
version = "0.1.0"
description = ""
authors = ["EsbenBL <53098504+EsbenBL@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "esbens_github"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pandas = "^1.5.3"
ipykernel = "^6.20.2"
requests = "^2.28.2"
matplotlib = "^3.6.3"
scipy = "^1.10.0"
seaborn = "^0.12.2"
datetime = "^5.0"
calplot = "^0.1.7.5"
plotly = "^5.13.0"
nbformat = "^5.7.3"
networkx = "^3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
